Fixed bug #42434 (ImageLine w/ antialias = 1px shorter)  - patch by wojjie at gmail dot com

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@286466 c90b9560-bf6c-de11-be94-00142212c4b1